Bubble Rain refact v1.2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     <div>
         <canvas id="bubbleRain"></canvas>
+        <h1 class="countDown"></h1>
         <img class="startGame" src="images/startButton.png"/>
         <img id="info" class="infoGame" href="#animatedModal" src="images/infoButton.png"/>
     </div>
